[package]
name = "gridkit_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gridkit_rs"
crate-type = ["cdylib"]

[dependencies]
enum_delegate = "0.2.0"
geo-types = "0.7.12"
num-traits = "0.2.19"
numpy = "0.21.0"
pyo3 = "0.21.2"
wkb = "0.7.1"
